Correction style boutons + conflits z-index

--- a/client/monopoly-eg/src/assets/styles/_general.scss
+++ b/client/monopoly-eg/src/assets/styles/_general.scss
@@ -167,6 +167,7 @@ input {
       button {
         width: 200px;
         margin: 20px auto 0 auto;
+        border-radius: 17.5px;
       }
     }
   }
